Upgraded to Quarkus 3.12